--- a/src/app/ubs/ubs/components/ubs-submit-order/ubs-submit-order.component.scss
+++ b/src/app/ubs/ubs/components/ubs-submit-order/ubs-submit-order.component.scss
@@ -412,6 +412,10 @@ h3 {
     flex-direction: row;
     justify-content: center;
     gap: 16px;
+
+    .btn {
+      width: 100%;
+    }
   }
 }
 
